# McCode

./: .gitignore  .gitmodules  BUILD_DEPS.TXT  CHANGES  CHANGES_McStas  CHANGES_McXtrace  CMakeLists.txt  COPYING  INSTALL  INSTALL-McStas  INSTALL.TXT  LICENSE  MacInstall.command  Makefile.in  README  README.md  SECURITY.md  SUPPORT.md  TODO.txt  aclocal.m4  build.bat  build_allbutmac_mcstas  build_allbutmac_mcxtrace  build_arm_debs_mcstas  build_arm_debs_mcxtrace  build_debs_mcstas  build_debs_mcstas32  build_debs_mcstas_arm64  build_debs_mcxtrace  build_debs_mcxtrace32  build_debs_mcxtrace_arm64  build_loc.sh  build_loc_2.5_tree  build_loc_2.6_tree  build_loc_2.x_tree  build_loc_3.0_mac  build_loc_3.0_tree  build_loc_3.x_mac  build_loc_3.x_tree  build_loc_mcx.sh  (+115 more)
branches/mcstas-1.x/: CHANGES  README  cexp.c  cogen.c  configure.in  debug.c  file.c  install.bat  instrument.y  list.c  mcconfig.pl  mcconvert.1  mcdisplay.pl  mcformat.c  mcgui.pl  mcplot.pl  mcrun.1  mkdist
mcstas/: CMakeLists.txt  configure.in  header  mcstas.md.in
mcstas-comps/: CMakeLists.txt  Makefile.in  Monochromator_bent.comp  NOMENCLATURE  NOMENCLATURE.md  SEMSANS_Delft.instr  SESANS_Delft.instr  compmatrix.sh  comps_no_examples.txt  revision.in
mcstas-comps/contrib/: Al_window.comp  Analyser_ideal.comp  CavitiesIn.comp  CavitiesOut.comp  Collimator_ROC.comp  Conics_EH.comp  Conics_HE.comp  Conics_PH.comp  Conics_PP.comp  Dose_calculator.comp  E_4PI.comp  Elliptic_guide_gravity.comp  Elliptic_guide_gravity_shieldinglogger.comp  Exact_radial_coll.comp  FermiChopper_ILL.comp  Fermi_chop2a.comp  Filter_graphite.comp  FlatEllipse_finite_mirror.comp  Foil_flipper_magnet.comp  Foil_flipper_magnet2.comp  GISANS_sample.comp  Guide_anyshape_r.comp  Guide_channeled_shieldinglogger.comp  Guide_curved.comp  Guide_curved_shieldinglogger.comp  Guide_four_side.comp  Guide_four_side_10_shells.comp  Guide_four_side_2_shells.comp  Guide_gravity_psd.comp  Guide_gravity_shieldinglogger.comp  Guide_honeycomb.comp  Guide_m.comp  Guide_multichannel.comp  Guide_shieldinglogger.comp  He3_cell.comp  ISIS_moderator.comp  Lens.comp  Lens_simple.comp  Mirror_Curved_Bispectral.comp  Mirror_Elliptic.comp  (+79 more)
mcstas-comps/data/: Al.laz  Al.nxs  Al2O3_sapphire.laz  Al2O3_sapphire.trm  Au.laz  B4C.laz  BCC_fake.lau  BEER_MCB.mcpl  BEER_MR.mcpl  Be.nxs  C60.lau  CaF2.lau  Cementite.nxs  Cs_liq_tot.sqw  Cu.nxs  Cu2MnAl.laz  D2_liq_20_coh.sqw  D2_liq_21_tot.sqw  D2_pow_12_tot.sqw  Diamond.nxs  Fe.laz  Fe.nxs  Fe_Gamma.laz  Fe_gamma.nxs  Ge_liq_inc.sqw  Guide.off  Guide_r.off  H2O_ice_1h.laz  HOPG.rfl  He4_liq_1_coh.sqw  He4_liq_coh.sqw  I2.laz  La2CuO4_rial_yzdirect_rel_all_nolabel.txt  Martensite.nxs  Mg.nxs  Mirrotron_mirors_2020.txt  Mo.laz  Na.nxs  Na2Ca3Al2F14.laz  NaCl.nxs  (+21 more)
mcstas-comps/examples/: BNL_H8.instr  BNL_H8_simple.instr  BTsimple.instr  Bent_monochromator_test.instr  ESS_2001_bispectral.instr  ESS_2015_test.instr  ESS_BEER_MCPL.instr  ESS_BIFROST_shielding.instr  ESS_Brilliance_2001.instr  ESS_Brilliance_2012.instr  ESS_Brilliance_2013.instr  ESS_Brilliance_2014.instr  ESS_Brilliance_2015.instr  ESS_Brilliance_TDR.instr  ESS_IN5_reprate.instr  ESS_Testbeamline_HZB_V20.instr  ESS_butterfly.instr  ESS_butterfly_Guide_curved_test.instr  ESS_butterfly_MCPL_test.instr  ESS_butterfly_test.instr  ESS_butterfly_tfocus_NOFOCUS_test.instr  ESS_butterfly_tfocus_test.instr  ESS_mcpl2hist.instr  FZJ_BenchmarkSfin2.instr  FZJ_KWS2_Lens.instr  FZJ_SANS_KWS2_AnySample.instr  Gallmeier_SNS_decoupled_poisoned.instr  Granroth_SNS_decoupled_poisoned.instr  HZB_FLEX.instr  HZB_NEAT.instr  He3_spin_filter.instr  Histogrammer.instr  ILL_BRISP.instr  ILL_D2B.instr  ILL_D2B_noenv.instr  ILL_D4.instr  ILL_H10_IN8.instr  ILL_H113.instr  ILL_H13_IN20.instr  ILL_H142.instr  (+264 more)
mcstas-comps/examples-fail/: ESS_butterfly_Guide_curved_test.instr  ILL_H22_D1A.instr  ILL_H22_D1B.instr  ILL_H25_IN22.instr  ILL_H53_IN14.instr  ILL_Lagrange.instr  Reflectometer.instr  Test_Guides.instr  Test_Guides_Curved.instr  Test_Magnetic_Rotation.instr  Test_Scatter_log_ssw_mcnp.instr  Test_StatisticalChopper.instr  Union_external_component_test.instr  Union_test_powder.instr
mcstas-comps/examples-full/: ESS_butterfly_Guide_curved_test.instr  ESS_butterfly_tfocus_test.instr  FZJ_SANS_KWS2_AnySample.instr  HZB_NEAT.instr  Histogrammer.instr  ILL_H10_IN8.instr  ILL_H13_IN20.instr  ILL_H143_LADI.instr  ILL_H16_IN5.instr  ILL_H22_D1A.instr  ILL_IN13.instr  ILL_IN5.instr  ILL_IN5_Mantid.instr  ISIS_GEM.instr  ISIS_HET.instr  ISIS_MERLIN.instr  ISIS_OSIRIS.instr  ISIS_Prisma2.instr  ISIS_SANS2d_Mantid.instr  RITA-II.instr  RTP_DIF.instr  SE_example2.instr  SNS_ARCS.instr  SNS_test.instr  Test_Fermi.instr  Test_FocalisationMirrors.instr  Test_PreMonitor_nD.instr  Test_Scatter_log_ssw_mcnp.instr  Test_Sources.instr  Test_StatisticalChopper.instr  Test_pol_tabled.instr  Union_manual_example.instr  Union_test_absorption.instr  linup-1.instr  linup-5.instr  linup-7.instr  templateLaueGPU.instr  templateNMX.instr  templateNMX_TOF.instr  templateSasView_Mantid.instr
mcstas-comps/examples-parked/: ILL_H5_new.instr  SE_example.instr  Test_Fermi.instr  Test_Pol_Bender.instr  Test_Scatter_log_losses.instr  Test_Scatter_log_mvalues.instr  Test_shellguides.instr
mcstas-comps/libs/: mcpl
mcstas-comps/misc/: Annulus.comp  Beam_spy.comp  Circle.comp  Cone.comp  Disc.comp  File.comp  GPUDisplay.comp  Legacy_circle.comp  MCPL_input.comp  MCPL_input_GPU.comp  MCPL_input_once.comp  MCPL_output.comp  MCPL_output_GPU.comp  MCPL_output_noacc.comp  PolAnalyser_ideal.comp  Progress_bar.comp  Scatter_log_asciidump.comp  Scatter_log_iterator.comp  Scatter_log_iterator_stop.comp  Scatter_logger.comp  Scatter_logger_stop.comp  Set_pol.comp  Shape.comp  Shape_simple.comp  Vitess_input.comp  Vitess_output.comp  misc_examples.txt
mcstas-comps/monitors/: Brilliance_monitor.comp  Cyl_monitor.comp  Cyl_monitor_PSD.comp  E_monitor.comp  (+46 more)
mcxtrace/: CMakeLists.txt  configure.in  header  mcxtrace.md.in
mcxtrace-comps/: CMakeLists.txt  NOMENCLATURE  README.md  compmatrix.sh  comps_no_examples.txt  sasmodels
(+13229 files in other folders)
