#
#   This file is part of the McStas neutron ray-trace simulation package
#   Copyright (C) 1997-2007, All rights reserved
#   Risoe National Laborartory, Roskilde, Denmark
#   Institut Laue Langevin, Grenoble, France
#
#   This program is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 2 of the License, or
#   (at your option) any later version.
#
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program; if not, write to the Free Software
#   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#
dnl Process this file with autoconf to produce a configure script.

AC_INIT(McStas, 1.11, www.mcstas.org)
AC_PROG_CC
AC_PROG_INSTALL
CF_ANSI_CC_CHECK
MC_ANSI_MATH_PROTO
AC_CHECK_LIB(pthread, pthread_create)
if test "${ac_cv_lib_pthread_pthread_create+set}" = set; then
	AC_SUBST([HAVE_LIBPTHREAD], [yes])
else
	AC_SUBST([HAVE_LIBPTHREAD], [no])
fi
AC_ARG_WITH([nexus],
  [AS_HELP_STRING([--with-nexus],
     [enable support for NeXus/HDF libraries])],
  [WITH_NEXUS="-DHAVE_LIBNEXUS -lNeXus"])
if test "${with_nexus+set}" = set; then
  withval="$with_nexus"
  ac_cv_lib_NeXus_NXopen=1
  AC_SUBST([HAVE_LIBNEXUS], [1])
  AC_DEFINE([HAVE_LIBNEXUS], [1])
  AC_SUBST([WITH_NEXUS], ["-DHAVE_LIBNEXUS -lNeXus"])
  AC_DEFINE([WITH_NEXUS], ["-DHAVE_LIBNEXUS -lNeXus"])
else
  AC_SUBST([HAVE_LIBNEXUS], [0])
  AC_SUBST([WITH_NEXUS], [""])
  AC_DEFINE([WITH_NEXUS], [""])
fi
AC_CHECK_LIB(c, qsort, HAVE_QSORT=1, HAVE_QSORT=0)
AC_SUBST(HAVE_QSORT)
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_STRTOD
AC_CHECK_FUNCS(strcasecmp fdopen)
AC_PATH_PROGS(PERL,   [perl5 perl /usr/local/bin/perl], no)
AC_PATH_PROGS(SCILAB, [scilab runscilab /usr/local/bin/scilab /usr/lib/scilab/bin/scilab /lib/scilab/bin/scilab scilex], no)
AC_PATH_PROGS(MATLAB, [matlab /usr/local/bin/matlab], no)
AC_PATH_PROGS(PGPLOT, [pgxwin_server /usr/local/bin/pgxwin_server /usr/local/pgplot/pgxwin_server], no)
AC_PATH_PROGS(TCLTK,  [wish /usr/local/bin/wish tclsh], no)
AC_PATH_PROGS(SSH,    [ssh /usr/local/bin/ssh], no)
AC_PATH_PROGS(MPIRUN, [mpirun /usr/local/bin/mpirun], no)
AC_PATH_PROGS(MPICC,  [mpicc /usr/local/bin/mpicc], no)
AC_PATH_PROGS(BROWSER,[konqueror firefox mozilla-firefox mozilla netscape gnome-open epiphany galeon start msie /Applications/Safari.app/Contents/MacOS/Safari /Applications/Firefox.app/Contents/MacOS/firefox], no)
AC_PATH_PROGS(EDITOR, [nedit kate gedit xemacs xedit vim notepad wordpad], no)
AC_PATH_PROGS(VRMLVIEW, [octagaplayer freewrl gtklookat qtlookat xmlookat maclookat fltklookat lookat], no)
AC_PATH_PROGS(WGET, [wget], no)
AC_PATH_PROGS(PERLDL,   [perldl /usr/local/bin/perldl /usr/bin/perldl], no)
AC_PATH_PROGS(G77, [g77 f77 g95 f95 gfortran], no)
AC_PATH_PROGS(MINGW, [i586-mingw32msvc-gcc], no)
AC_PATH_PROGS(MAKE,   [make gmake], no)
AC_PATH_PROGS(AT,  [at], no)
AC_PATH_PROGS(HDFVIEW,  [hdfview /usr/local/bin/hdfview /usr/local/hdfview/hdfview], no)
# Important here: gnome-terminal is broken:
#  Any commandline arguments after -e must contain escaped spaces.
# BUT: If escaped in the perl code, use of xterm/konsole is broken....
# Hence we allow only gnome-terminal.wrapper which is debian only
# :(
AC_PATH_PROGS(TERMINAL,   [xterm konsole gnome-terminal.wrapper], no)

AC_ARG_WITH([pic],
  [AS_HELP_STRING([--with-pic],
     [enable support for PIC libraries (required to compile PGPLOT on some systems)])],
  [USE_PIC=$withval],
  [USE_PIC=no])
AC_SUBST(USE_PIC)

AC_OUTPUT(Makefile lib/tools/perl/mcstas_config.perl support/pgplot/pgplot.sh support/scilab/scilab.sh)

chmod a+x support/pgplot/pgplot.sh
chmod a+x support/scilab/scilab.sh
chmod a+x lib/tools/perl/mcstas_reconfigure

# warnings and errors
if test "$MAKE" == "no" ; then
  echo "ERROR: McStas installation requires 'make' or 'gmake'"
  exit
fi

if test "$PERL" = "no" ; then
  echo "WARNING: No Perl executable could be found !"
  echo "You will have to use"
  echo "   mcstas <file>.instr"
  echo "   $CC -o <file>.out <file>.instr -lm"
  echo "   <file>.out [simulation parameters]"
fi
if test "$TCLTK" = "no" ; then
  echo "WARNING: No Tcl/Tk installation could be found !"
  echo "You might not be able to use McGUI interface"
fi
if test "$BROWSER" = "no" ; then
  echo "WARNING: No HTML browser could be found !"
fi
if test "$SCILAB" == "no" && test "$MATLAB" == "no" && test "$PGPLOT" == "no" && test "$VRMLVIEW" == "no" ; then
  echo "WARNING: No Plotter (Matlab, Scilab, PGPLOT, VRML) could be found !"
fi

# final message at end of configure
if test "$USE_PIC" != "no" ; then
echo "Activating PIC compilation for: make install-pgplot"
fi
if test "$HAVE_LIBNEXUS" != "0" ; then
echo "Activating NeXus support in McStas"
fi
echo ""
if test "$WGET" != no ; then
  echo "Gnome support: If you experience crashes of mcgui when running in the "
  echo "  Gnome environment, please come back here and do a"
  echo ""
  echo "# make tk"
  echo ""
  echo "will install our patched version of perl-tk from the net"
fi
if test "$PGPLOT" == "no" ; then
  echo "To install PGPLOT for McStas, you need:"
  echo "= perl-PDL (perldl, pdl)"
  echo "= a fortran compiler (g77, gfortran)"
  echo "= X11-dev libraries/includes (libx11-dev, xserver-xorg-dev, libxt-dev)"
fi
if test "$PGPLOT" == "no" && test "$PERLDL" != "no" && test "$G77" != "no" ; then
  echo "PGPLOT install: you may try our automatic PGPLOT installation with"
  echo ""
  echo "For 64-bit machines, re-run # ./configure --with-pic first"
  echo "# make install-pgplot; ./configure; make; make install"
else if test "$PGPLOT" == "no" ; then
  echo "Install these and re-run McStas installation ./configure"
  fi
fi
if test "$SCILAB" == "no" ; then
  echo "Scilab install: you may try our automatic Scilab installation with"
  echo ""
  echo "# make install-scilab; ./configure; make; make install"
  echo ""
  echo "(requires Linux/Intel, wget and root priviliges)"
fi
echo ""
echo "To setup the plotting environment, execute either"
echo "# make config (automatically selects plotter, "
echo "       prefers PGPLOT before Matlab before Scilab before VRML)"
if test "$SCILAB" != "no" ; then
echo "# make scilab (selects scilab)"
fi
if test "$MATLAB" != "no" ; then
echo "# make matlab (selects matlab)"
fi
if test "$PGPLOT" != "no" ; then
echo "# make pgplot (selects pgplot)"
fi
if test "$VRMLVIEW" != "no" ; then
echo "# make vrml   (selects vrml)"
fi
echo ""
echo "After (optional) plotter config, build and install McStas by executing"
echo "# make; make install"
echo ""